--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,40 @@
+2005-09-29  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
+2005-09-25  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
+2005-09-24  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+	* ku.po: Updated Kurdish translation.
+
+2005-09-18  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
+2005-09-16  Clytie Siddall <clytie@riverland.net.au>
+
+        * vi.po: Updated Vietnamese translation.
+
+2005-09-14  Runa Bhattacharjee <runa@bengalinux.org>
+
+	* bn.po: Updated Bengali (bn) Translation by
+	Progga <progga@bengalinux.org>
+
+2005-09-10  Erdal Ronahi  <erdal.ronahi@gmail.com>
+
+        * ku.po: Added Kurdish translation
+
+2005-09-07  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
+=== nautilus 2.12.0 ===
+
 2005-09-04  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
