Translation updated by Ivar Smolin.
2005-11-07  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-03 06:45+0000\n"
-"PO-Revision-Date: 2005-10-13 11:45+0300\n"
+"PO-Revision-Date: 2005-11-06 14:15+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -3065,7 +3065,7 @@ msgstr "Loo _kataloog"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6109
 msgid "Create a new empty folder inside this folder"
-msgstr "Loob selle kataloogi sisse uue tühja kataloogi"
+msgstr "Selle kataloogi sisse uue tühja kataloogi loomine"
 
 #: ../src/file-manager/fm-directory-view.c:6111
 msgid "No templates Installed"
@@ -3081,7 +3081,7 @@ msgstr "_Tühi fail"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6115
 msgid "Create a new empty file inside this folder"
-msgstr "Loob selle kataloogi sisse uue tühja faili"
+msgstr "Selle kataloogi sisse uue tühja faili loomine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6122
@@ -3093,7 +3093,7 @@ msgstr "_Ava"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6123
 msgid "Open the selected item in this window"
-msgstr "Avab valitud kirjed praeguses aknas"
+msgstr "Valitud kirjete avamine praeguses aknas"
 
 #. name, stock id
 #. Location-specific actions
@@ -3106,7 +3106,7 @@ msgstr "Ava navigatsiooniaknas"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6131
 msgid "Open each selected item in a navigation window"
-msgstr "Avab kõik navigatsiooniaknas valitud kirjed"
+msgstr "Kõikide navigatsiooniaknas valitud kirjete avamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6134
@@ -3118,7 +3118,7 @@ msgstr "_Ava teise rakendusega..."
 #: ../src/file-manager/fm-directory-view.c:6135
 #: ../src/file-manager/fm-directory-view.c:6139
 msgid "Choose another application with which to open the selected item"
-msgstr "Valib teise rakenduse, millega valitud kirjet avada"
+msgstr "Valitud kirje avamiseks teise rakenduse valimine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6142
@@ -3170,7 +3170,7 @@ msgstr ""
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6169
 msgid "Select all items in this window"
-msgstr "Valib kõik selles aknas olevad kirjed"
+msgstr "Kõigi selles aknas olevate kirjete avamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6172
@@ -3181,7 +3181,7 @@ msgstr "Vali _muster"
 #: ../src/file-manager/fm-directory-view.c:6173
 msgid "Select items in this window matching a given pattern"
 msgstr ""
-"Valib kõik selles aknas olevad elemendid, mis vastavad määratud mustrile"
+"Kõigi selles aknas olevate ja määratud mustrile vastavate kirjete avamine"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6176
@@ -5646,7 +5646,7 @@ msgstr "Ava ü_lemine"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:615
 msgid "Open the parent folder"
-msgstr "Avab ülemise kataloogi"
+msgstr "Ülemise kataloogi avamine"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:621
