Use ctrl-shift-g to browse back in results. Fixes #320061.
2005-11-13  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-icon-container.c:
	Use ctrl-shift-g to browse back in results. Fixes #320061.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-13  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	Use ctrl-shift-g to browse back in results. Fixes #320061.
+
 2005-11-08  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-tree-view.c: (create_tree):
