--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-14  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
 2005-11-14  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian translation by Vital Khilko.
