Add skip all button. (#48331) Patch from Guillaume Desmottes
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file-operations.c:
	(handle_transfer_overwrite):
	Add skip all button. (#48331)
	Patch from Guillaume Desmottes <cass@skynet.be>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	(handle_transfer_overwrite):
+	Add skip all button. (#48331)
+	Patch from Guillaume Desmottes <cass@skynet.be>
+
 2005-11-13  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-icon-container.c:
