--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file-operations.[ch]:
+	* src/file-manager/fm-directory-view.[ch]:
+	* src/file-manager/fm-icon-view.c:
+	* src/file-manager/fm-list-view.c:
+	* src/file-manager/fm-tree-view.c:
+	Get the right position on new folders/files when in
+	manual position mode.
+	Patch from Christian Neumair
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations.c:
 	(handle_transfer_overwrite):
 	Add skip all button. (#48331)
