--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c: (draw_frame):
+	Handle the case of missing highlight frame better.
+	Patch from Christian Neumair
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-properties-window.c:
 	Nicer ui for setting custom icons (#95115)
 	Patch from Christian Neumair
