--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-desktop-window.c (realize):
+	Fix typo (#320003)
+
 2005-11-07  Federico Mena Quintero  <federico@ximian.com>
 
        Fix the volumes part of bug #45953:
