Handle emblem size correctly when zoomed. Patch from Christian Neumair
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(nautilus_icon_canvas_item_bounds):
	Handle emblem size correctly when zoomed.
	Patch from Christian Neumair

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	(nautilus_icon_canvas_item_bounds):
+	Handle emblem size correctly when zoomed.
+	Patch from Christian Neumair
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-desktop-window.c (realize):
 	Fix typo (#320003)
 
