Always use gnome-fs-home for home icon.
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-tree-view.c: (create_tree):
	* src/nautilus-main.c: (register_icons):
	* src/nautilus-window-menus.c:
	Always use gnome-fs-home for home icon.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-tree-view.c: (create_tree):
+	* src/nautilus-main.c: (register_icons):
+	* src/nautilus-window-menus.c:
+	Always use gnome-fs-home for home icon.
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.c:
 	(nautilus_icon_canvas_item_bounds):
 	Handle emblem size correctly when zoomed.
