--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-14  Francisco Javier F. Serrador  <cyphra@nano.tecknolabs.com>
+
+	* es.po: Updated Spanish translation
+
 2005-11-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
