Require new eel
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require new eel

	* NEWS:
	Update for release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require new eel
+
+	* NEWS:
+	Update for release
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-tree-view.c: (create_tree):
 	* src/nautilus-main.c: (register_icons):
 	* src/nautilus-window-menus.c:
