--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Major changes in 2.13.2 are:
+* Fix mime list problem introduced with sort change
+* Build fixes
+* Keyboard support for icon stretching
+* Finally fix tree sidebar crash
+* ctrl-shift-g goes backwards in typeahead
+* Add Skip all button in copy/move conflict dialog
+* Position new files/folders correctly in manual layout mode
+* Nicer UI for setting custom file icons
+* Fix CD icon positioning on desktop
+* Fix desktop redraw issues on non-100% zoom levels
+* Use the same home icon always
+
 Major changes in 2.13.1 are:
 * Adds volume/drive api for modules
 * Better sizes of stock icons in many places
