--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-11-14  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.13.2 ===
+
+2005-11-14  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Require new eel
 
 	* NEWS:
