--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,8 @@
 
 	* es.po: Updated Spanish translation
 
+=== nautilus 2.13.2 ===
+
 2005-11-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
