--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-17  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2005-11-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
