Updated Macedonian translation
2005-11-18  Arangel Angov  <ufo@linux.net.mk>

	* mk.po: Updated Macedonian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-18  Arangel Angov  <ufo@linux.net.mk>
+
+	* mk.po: Updated Macedonian translation
+	
 2005-11-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
