Updated Spanish translation.
2005-11-17  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-14 17:55+0100\n"
-"PO-Revision-Date: 2005-11-14 17:55+0100\n"
+"POT-Creation-Date: 2005-11-17 23:20+0100\n"
+"PO-Revision-Date: 2005-11-17 23:20+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -4674,15 +4674,13 @@ msgid "Creating Properties window."
 msgstr "Creando ventana de propiedades."
 
 #: ../src/file-manager/fm-properties-window.c:3828
-#, fuzzy
 msgid "Select Custom Icon"
-msgstr "_Seleccionar un icono personal…"
+msgstr "Seleccione el icono personalizado"
 
 # libnautilus-private/nautilus-global-preferences.c:592
 #: ../src/file-manager/fm-properties-window.c:3830
-#, fuzzy
 msgid "_Revert"
-msgstr "_Nunca"
+msgstr "_Revertir"
 
 # #-#-#-#-#  nautilus-es.po (Nautilus)  #-#-#-#-#
 # src/file-manager/fm-properties-window.c:1581
