Ask for confirmation when deleting through the location context menu.
2005-11-19  Christian Neumair  <chris@gnome-de.org>

	* src/file-manager/fm-directory-view.c:
	(action_location_delete_callback): Ask for confirmation when deleting
	through the location context menu. Fixes #321584.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-19  Christian Neumair  <chris@gnome-de.org>
+
+	* src/file-manager/fm-directory-view.c:
+	(action_location_delete_callback): Ask for confirmation when deleting
+	through the location context menu. Fixes #321584.
+
 2005-11-18  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-file-management-properties.c:
