--- a/po/es.po
+++ b/po/es.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-30 23:36+0100\n"
-"PO-Revision-Date: 2005-10-30 23:12+0100\n"
+"PO-Revision-Date: 2005-11-20 23:52+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -4077,7 +4077,7 @@ msgstr "Lo siento, no se ha podido renombrar «%s» a «%s»."
 # src/file-manager/fm-properties-window.c:1641
 #: ../src/file-manager/fm-error-reporting.c:144
 msgid "The item could not be renamed."
-msgstr "El elemento se pudo renombrar."
+msgstr "El elemento no se pudo renombrar."
 
 # src/file-manager/fm-error-reporting.c:214
 #: ../src/file-manager/fm-error-reporting.c:145
