--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-20  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: #321973: Bug resolution.
+
 2005-11-18  Arangel Angov  <ufo@linux.net.mk>
 
 	* mk.po: Updated Macedonian translation
