--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: #321973 Bug fix.
+
 2005-11-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
