--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-21  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2005-11-21  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: #321973 Bug fix.
