Use pixel offset for indenting, not spaces. Patch from Jaap Haitsma
2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-file-management-properties.glade:
	Use pixel offset for indenting, not spaces.
	Patch from Jaap Haitsma

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-22  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-file-management-properties.glade:
+	Use pixel offset for indenting, not spaces.
+	Patch from Jaap Haitsma 
+
 2005-11-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* libnautilus-private/nautilus-module.c (nautilus_module_load): Use
