Don't frame thumbnails with alpha channel.
2005-11-23  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c:
	(nautilus_thumbnail_load_framed_image):
	Don't frame thumbnails with alpha channel.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-23  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-thumbnails.c:
+	(nautilus_thumbnail_load_framed_image):
+	Don't frame thumbnails with alpha channel.
+
 2005-11-22  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-file-management-properties.glade:
