--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-11-24  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.[ch]:
+	Add nautilus_file_list_cancel_call_when_ready.
+	
+	* src/file-manager/fm-directory-view.c:
+	Handle multiple files being activated together.
+
+	Patch from Christian Neumair with some changes.
+
 2005-11-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-thumbnails.c:
