New knob icon from Luca Ferretti
2005-11-24  Alexander Larsson  <alexl@redhat.com>

	* icons/knob.png:
	New knob icon from Luca Ferretti

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-11-24  Alexander Larsson  <alexl@redhat.com>
 
+	* icons/knob.png:
+	New knob icon from Luca Ferretti
+
+2005-11-24  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file.[ch]:
 	Add nautilus_file_list_cancel_call_when_ready.
 	
