Allow shift-delete even if not visible in ui.
2005-11-24  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c:
	Allow shift-delete even if not visible in ui.

	Patch from Nelson Benítez <gnel@cenobioracing.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-11-24  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-directory-view.c:
+	Allow shift-delete even if not visible in ui.
+
+	Patch from Nelson Benítez <gnel@cenobioracing.com>
+
+2005-11-24  Alexander Larsson  <alexl@redhat.com>
+
 	* icons/knob.png:
 	New knob icon from Luca Ferretti
 
