HIG fixes for the delete confirmation dialog. Remove window title &
2005-11-24  Dennis Cranston  <dennis_cranston@yahoo.com>

        * src/file-manager/fm-directory-view.c: (confirm_delete_directly):
        HIG fixes for the delete confirmation dialog.  Remove window
        title & convert dialog type from question to warning.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-24  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* src/file-manager/fm-directory-view.c: (confirm_delete_directly):
+	HIG fixes for the delete confirmation dialog.  Remove window 
+	title & convert dialog type from question to warning. 
+
 2005-11-24  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c:
