Update for release
2005-11-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-28  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2005-11-19  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
