--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.12.2 are:
+
+* Skip non-existant bookmarks in menu/sidebar
+* Sort applications in open dialogs and menus
+* Deletion confirmation dialog fixes
+* Fix leaks
+* Fix crashes
+
 Major changes in 2.12.1 are:
 * Pass all selected files to menu extensions, not only one per mimetype
 * Use much fewer file monitors
