Refactor query loading into NautilusQuery object.
2005-12-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory.c:
	* libnautilus-private/nautilus-query.[ch]:
	* libnautilus-private/nautilus-search-directory.[ch]:
	Refactor query loading into NautilusQuery object.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-12-01  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-directory.c:
+	* libnautilus-private/nautilus-query.[ch]:
+	* libnautilus-private/nautilus-search-directory.[ch]:
+	Refactor query loading into NautilusQuery object.
+
+2005-12-01  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Check for update-mime-database
 	
