More functions to save queres.
2005-12-02  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-search-directory.[ch]:
	More functions to save queres.

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/nautilus-directory-view-ui.xml:
	Initial stubs for save search menu items.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-12-02  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-search-directory.[ch]:
+	More functions to save queres.
+	
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c:
+	* src/file-manager/nautilus-directory-view-ui.xml:
+	Initial stubs for save search menu items.
+
 2005-12-01  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory.c:
